edit highlight system to fix ie issues. column highlighting and empty column highlighting were not showing

--- a/app/sass/_helpers.scss
+++ b/app/sass/_helpers.scss
@@ -19,3 +19,7 @@
 .button-align-right{
   float: right !important;
 }
+
+.gu-unselectable .hide-on-drag{
+  display: none;
+}
